Update main2.yml 1

--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -16,12 +16,12 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3 # Updated to v3
+        uses: actions/checkout@v3 # Still the latest version
 
       - name: Set up Node.js
-        uses: actions/setup-node@v3 # Updated to v3
+        uses: actions/setup-node@v3
         with:
-          node-version: '16' # Specify the Node.js version
+          node-version: '20' # Explicitly specify Node 20
           registry-url: 'https://registry.npmjs.org'
 
       - name: Install dependencies
