--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
 		"dist",
 		"scripts/types.d.ts"
 	],
+	 "repository": {
+	    "type": "git",
+	    "url": "https://github.com/mid-guy/v.i.t.u"
+	  }
 	"types": "dist/types.d.ts",
 	"scripts": {
 		"build": "rollup -c",
