--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -1,4 +1,4 @@
-name: Build and Test
+name: Build, Test, and Publish
 
 on:
   push:
@@ -21,7 +21,7 @@ jobs:
           node-version: '20'
       - run: npm install
 
-publish:
+  publish:
     needs: build
     if: startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
