--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -20,6 +20,7 @@ jobs:
         with:
           node-version: '20'
       - run: npm install
+      - run: npm run build
 
   publish:
     needs: build
@@ -32,7 +33,6 @@ jobs:
         with:
           node-version: '20'
           registry-url: 'https://registry.npmjs.org/'
-      - run: npm install
       - name: Publish to NPM
         run: npm publish
         env:
