--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -21,6 +21,8 @@ jobs:
           node-version: '20'
       - run: npm install
       - run: npm run build
+      - name: Verify `dist` Directory Contents
+        run: ls -la dist # List files in `dist` to verify it's correctly built
 
   publish:
     needs: build
