--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -20,19 +20,32 @@ jobs:
         with:
           node-version: '20'
       - run: npm install
-      # - run: npm run build
-      # - name: Verify `dist` Directory Contents
-      #   run: ls -la dist # List files in `dist` to verify it's correctly built
+      - run: npm run build
+      - name: Verify `dist` Directory Contents
+        run: ls -la dist # Check if `dist` directory is created
+      - name: Upload `dist` as Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: dist-artifact
+          path: dist
 
   publish:
     needs: build
+    if: startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '20'
           registry-url: 'https://registry.npmjs.org/'
+      - name: Download `dist` Artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: dist-artifact
+          path: dist # This sets up the `dist` folder in the working directory
+      - run: npm install
       - name: Publish to NPM
         run: npm publish --access public
         working-directory: dist
