--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"types": "dist/types.d.ts",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/mid-guy/v.i.t.u"
+		"url": "git+https://github.com/mid-guy/v.i.t.u.git"
 	},
 	"scripts": {
 		"build": "npm run clean && rollup -c",
