--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
 		"type": "git",
 		"url": "git+https://github.com/mid-guy/v.i.t.u.git"
 	},
+	"publishConfig": {
+		"access": "public"
+	},
 	"scripts": {
 		"build": "npm run clean && rollup -c",
 		"clean": "rm -rf dist"
